songvoter/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: songvoter-ingress
  namespace: songvoter
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: sv.coflnet.com
    http:
      paths:
      - path: /
        backend:
          serviceName: backend-service
          servicePort: 4200
